# HelloPython

./: .all-contributorsrc  .copier-answers.yml  CONTRIBUTING.md  LICENSE  README.md  bootstrap.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: conf.py  index.rst  installation.rst  usage.rst
docs/design/: index.rst
docs/design/figures/: design.mmd
src/hello_python/: main.py
tests/: test_lists.py  test_main.py
